# openfest-2025

./: .gitignore  Cargo.toml  mydb.db  notes.md  out.json  result.json  spellfix1.dylib  wl.txt
cli/: notes.md
csv/: import.csv  notes.md
elf/: Dockerfile  notes.md
http/: 1-pokemon-simple.sql  2-pokemon-with-types.sql  demo.sql  notes.md  pokemon-with-types.sql
session/: Makefile  a.db  b.db  changes-from-b  interactive_changeset  interactive_changeset.cpp  notes.md
simple/: demo.db  package-lock.json  package.json  todo.js
spellfix/: notes.md
src/: main.rs
vector/: Cargo.toml
vector/src/: main.rs
web/: Cargo.toml
web/src/: main.rs
zip/: notes.md
